--- a/spring-boot-mybatis/src/main/resources/application.properties
+++ b/spring-boot-mybatis/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #Data Source
 server.port= 8082
-spring.datasource.driverClassName = org.postgresql.Driver
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = shiw@2214
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://localhost:3306
+spring.datasource.username = root
+spring.datasource.password = Shiw@2214
+spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.validation-query= SELECT 1
 spring.jpa.show-sql=true
