--- a/spring-boot-mybatis/src/main/resources/application.properties
+++ b/spring-boot-mybatis/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 
 #Data Source
 server.port= 8082
-spring.datasource.url = jdbc:mysql://localhost:3306
+spring.datasource.url = jdbc:mysql://localhost:3306/Books
 spring.datasource.username = root
 spring.datasource.password = shiw@123
-spring.datasource.tomcat.test-while-idle=true
-spring.datasource.tomcat.validation-query= SELECT 1
 spring.jpa.show-sql=true
